--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors":[
         {
             "name":"Fabrizio Branca",
-            "email":"mail@{firstname}-{lastname}.de"
+            "email":"mail@fabrizio-branca.de"
         }
     ],
     "require":{
